@startuml
hide circle
skinparam linetype ortho


entity "Cliente" as Cliente {
    * idCliente : int
    --
    nombre : string
    correo : string
    password : string
}

entity "Administrador" as Administrador {
    * idAdministrador : int
    --
    nombre : string
    correo : string
    password : string
}

entity "Reserva" as Reserva {
    * idReserva : int
    --
    fechaInicio : Date
    fechaFin : Date
    estado : string
    clienteId : int
}

entity "Habitacion" as Habitacion {
    * idHabitacion : int
    --
    numero : string
    tipo : string
    precio : decimal
    estado : string
}

entity "Pago" as Pago {
    * idPago : int
    --
    fechaPago : Date
    monto : decimal
    estado : string
    reservaId : int
}

entity "Reserva_Habitacion" as ReservaHabitacion {
    * reservaId : int
    * habitacionId : int
}

Cliente ||--o{ Reserva : realiza
Reserva ||--|{ Pago : tiene
Reserva ||--o{ ReservaHabitacion : incluye
Habitacion ||--o{ ReservaHabitacion : pertenece a

@enduml
